--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,13 @@
         android:textColor="#000000"
         android:layout_marginTop="16dp"
         android:padding="8dp" />
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchVolumeTrigger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enable Background Volume Trigger"
+        android:textColor="#000000"
+        android:layout_marginTop="10dp"
+        android:padding="8dp" />
 
 </LinearLayout>
