--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,42 @@
     android:padding="20dp"
     android:background="#FAF8FF">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+        <LinearLayout
+            android:id="@+id/llRiskStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:background="#E1F5FE">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="🛡️ SafeGuard AI Monitor"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tvRiskStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AI Status: Analyzing Location..."
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:layout_marginTop="4dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +49,7 @@
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#000000"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="10dp"/>
 
     <EditText
         android:id="@+id/etPhone"
@@ -57,17 +93,18 @@
         android:text="Selected contact: None"
         android:textColor="#000000"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:padding="12dp" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchShake"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enable Shake to SOS (Shake 3 times)"
+        android:text="Enable Shake to SOS (3 times)"
         android:textColor="#000000"
         android:layout_marginTop="16dp"
         android:padding="8dp" />
+
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchVolumeTrigger"
         android:layout_width="wrap_content"
