--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:hint="+91XXXXXXXXXX"
         android:textColor="#000000"
         android:textColorHint="#757575"
+        android:maxLength="10"
         android:inputType="phone" />
 
     <CheckBox
