--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,9 +109,9 @@
         android:id="@+id/switchVolumeTrigger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enable Background Volume Trigger"
-        android:textColor="#000000"
         android:layout_marginTop="10dp"
-        android:padding="8dp" />
+        android:padding="8dp"
+        android:text="Trigger Fake Call"
+        android:textColor="#000000" />
 
 </LinearLayout>
