--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,4 +115,13 @@
         android:text="Trigger Fake Call"
         android:textColor="#000000" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchNetworkGuard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="8dp"
+        android:text="Auto Network-Zone Alerts"
+        android:textColor="#000000" />
+
 </LinearLayout>
